# hse-2023-slr

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  body_extraction.ipynb  body_extraction.py  docker-compose.yaml  pyproject.toml  requirements.txt
configs/: mvit_32_2_conf.yaml  mvit_48_2_conf.yaml  swin_48_1_conf.yaml
data/: annotations.csv
feature_extraction/: hands_features_extraction.py
hse_slr/: draw_landmarks.py  features_extraction.py  recognition.py  utils.py
hse_slr/models/: model.py  utils.py
hse_slr/models/configs/: config.json
htmlcov/: d_bf7dfcbb774ae7d1_activity_buttons_py.html  d_bf7dfcbb774ae7d1_menu_py.html  d_bf7dfcbb774ae7d1_recognition_buttons_py.html  d_da269e72ec3ed4fe_activity_py.html  d_da269e72ec3ed4fe_begin_py.html  d_da269e72ec3ed4fe_feature_extraction_py.html  d_da269e72ec3ed4fe_rating_py.html  d_da269e72ec3ed4fe_single_predict_py.html  index.html  status.json
notebooks/: eda.ipynb  models.ipynb
slr_app/: main.py  requirements.txt
slr_app/routers/: activity.py  begin.py  feature_extraction.py  rating.py  recognize.py
slr_bot/: README.md  bot.py  db.py
slr_bot/handlers/: activity.py  begin.py  feature_extraction.py  rating.py  single_predict.py
slr_bot/keyboards/: activity_buttons.py  menu.py  recognition_buttons.py
tests/: test_feature_extractor.py  test_landmark_drawer.py
tests/bot/: mock_datasets.py  mock_engine.py  test_activity_menu.py  test_begin.py  test_begin_menu.py  test_features_extraction.py  test_keyboards.py  test_rating.py  test_single_predict.py
tubevit/: dataset.py  model.py  positional_encoding.py
tubevit/scripts/: calculate_metrics.py  convert_vit_weight.py  train.py
